@@ -4,13 +4,18 @@ import java.util.ArrayList;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class InteractionModel {
-    ArrayList<DemoAsteroid> asteroidSet;
-    ArrayList<EnergyBullet> bullets;
-    ArrayList<EnergyBullet> cleanBullets;
-    ArrayList<Subscriber> subscribers;
-    double canvasWidth,canvasHeight;
-    double bulletSpawn = 23;
-    int level,cooldown;
+    private ArrayList<DemoAsteroid> asteroidSet;
+    private ArrayList<EnergyBullet> bullets;
+    private ArrayList<Subscriber> subscribers;
+    private double canvasWidth,canvasHeight;
+    private double bulletSpawn = 23;
+    private int level,cooldown;
+    private long score;
+    private Alien alien;
+    private enum GAMESTATE {DEAD,GOING,STANDBY}
+    private GAMESTATE gameState;
+    private double alienBulletSpeed = 6;
+    private double playerBulletSpeed = 6;
     InteractionModel(double width, double height){
         asteroidSet = new ArrayList<>();
         bullets = new ArrayList<>();
@@ -18,11 +23,16 @@ public class InteractionModel {
         canvasWidth = width;
         canvasHeight = height;
         level = 0;
-        cooldown = 100;
+        cooldown = 200;
+        score = 0;
+        alien = new Alien();
+        gameState = GAMESTATE.STANDBY;
     }
     public void start(){
         System.out.println("Started game");
         level++;
+        gameState = GAMESTATE.GOING;
+        alien.startTimer();
         createAstroids();
     }
 
@@ -58,25 +68,22 @@ public class InteractionModel {
         asteroidSet.forEach(demoAsteroid->{
             demoAsteroid.move(canvasWidth,canvasHeight);
         });
+        //clean up old bullets
         AtomicInteger popBullet = new AtomicInteger();
-
         bullets.forEach(bullet->{
+            //bullets will expire one at a time
+            //TODO:convert bullets to linkedList()
             if (bullet.isTimedOut()){
                 popBullet.getAndAdd(1);
-//                bullets.remove(bullet);
             } else {
                 bullet.move();
             }
         });
+        //bullet has expired, remove it
         if (popBullet.get()>0){
-            bullets.remove(0);
+            bullets.removeFirst();
             popBullet.set(0);
         }
-//        if (!bullets.isEmpty() && !asteroidSet.isEmpty()){
-//            asteroidSet.forEach(asteroid->{
-//                System.out.println("haza");
-//            });
-//        }
 
         //Terrible design but we need something
         collider();
@@ -84,11 +91,15 @@ public class InteractionModel {
         if (asteroidSet.isEmpty()&&level!=0){
             if (cooldown <=0){
                 level++;
+                if (level > 3 && level % 2 == 0){
+                    alien.levelUpAlien();
+                }
                 createAstroids();
                 cooldown = 200;
             }
             cooldown--;
         }
+        callAlien();
         notifySubscribers();
     }
 
@@ -97,19 +108,27 @@ public class InteractionModel {
             int bulletStep = 0;
             for (int i = 0; i < bullets.size(); i++) {
                 int asteroidStep = 0;
+//                if ()
                 for (int j = 0; j < asteroidSet.size(); j++) {
                     //test if bullet hit asteroid
                     if (distance(bullets.get(bulletStep).positionX, bullets.get(bulletStep).positionY,
-                            asteroidSet.get(asteroidStep).positionX * canvasWidth, asteroidSet.get(asteroidStep).positionY * canvasHeight, asteroidSet.get(asteroidStep).getRadius())) {
+                            asteroidSet.get(asteroidStep).getPositionX() * canvasWidth, asteroidSet.get(asteroidStep).getPositionY() * canvasHeight, asteroidSet.get(asteroidStep).getRadius())) {
                         //is the asteroid destroyed
                         if (asteroidSet.get(asteroidStep).isDestroyed()) {
                             asteroidSet.remove(asteroidStep);
                             bullets.remove(bulletStep);
+                            score=score+100;
                             if (asteroidSet.isEmpty() || bullets.isEmpty() || bulletStep <= bullets.size()){
                                 break;
                             }
                             //not destroyed just downsize
                         } else {
+                            //Add to score
+                            if (asteroidSet.get(asteroidStep).getAsteroidSize()== DemoAsteroid.Size.BIG){
+                                score = score + 20;
+                            } else {
+                                score = score + 50;
+                            }
                             asteroidSet.add(new LesserAsteroid(asteroidSet.get(asteroidStep).getPositionX(),asteroidSet.get(asteroidStep).getPositionY(),asteroidSet.get(asteroidStep)));
                             asteroidSet.get(asteroidStep).sizeDown();
                             bullets.remove(bulletStep);
@@ -135,7 +154,10 @@ public class InteractionModel {
     public void restart() {
         asteroidSet.clear();
         bullets.clear();
+        alien.die();
+        alien.restart();
         level = 0;
+        score = 0;
     }
     public ArrayList<DemoAsteroid> getAsteroids() {
         return asteroidSet;
@@ -160,12 +182,51 @@ public class InteractionModel {
         double startX = bulletSpawn* xRatio + playerX;
         double startY = bulletSpawn* yRatio + playerY;
 
-        bullets.add(new EnergyBullet(startX,startY,xRatio,yRatio,5));
+        bullets.add(new EnergyBullet(startX,startY,xRatio,yRatio,playerBulletSpeed,false));
     }
+
     public boolean distance(double bX, double bY, double aX, double aY, double aRadius){
         return pythagoras(bX, bY, aX, aY) < aRadius;
     }
     public double pythagoras(double bX, double bY, double aX, double aY){
         return Math.sqrt((bX-aX)*(bX-aX)+(bY-aY)*(bY-aY));
     }
+
+    public String getScore() {
+        return String.format("%07d",score);
+    }
+
+    public int getLevel() {
+        return level;
+    }
+
+    /***
+     *  Alien stuff
+     */
+
+    public boolean isAlienAlive(){
+        return alien.isAlive();
+    }
+
+    private void callAlien(){
+        if (gameState == GAMESTATE.GOING && alien.isAlive()){
+            alien.move(canvasWidth,canvasHeight);
+            shootAlien();
+        } else if (gameState == GAMESTATE.GOING && alien.isDead()) {
+            alien.respawn();
+        }
+    }
+    public void shootAlien(){
+        if (alien.shoot()){
+            bullets.add(new EnergyBullet(alienX()*canvasWidth,alienY()*canvasHeight,
+                    alien.getxRatio(),alien.getyRatio(),alienBulletSpeed, true));
+        }
+    }
+    public double alienX(){
+        return alien.getPositionX();
+    }
+    public double alienY(){
+        return alien.getPositionY();
+    }
+
 }
